--- a/v93-1450-command-summary-Chapter05.html
+++ b/v93-1450-command-summary-Chapter05.html
@@ -649,7 +649,7 @@
                             <div class="output-text">Save scan results to file</div>
                             <div class="example-line">
                                 <span class="prompt">[analyst@security-server ~]$</span>
-                                <span class="command-text" onclick="copyCommand('find /var/log -name \"*.log\" 2>/dev/null > log_files.txt')">find /var/log -name "*.log" 2>/dev/null > log_files.txt</span>
+                                <span class="command-text" onclick="copyCommand('find /var/log -name *.log 2>/dev/null > log_files.txt')">find /var/log -name "*.log" 2>/dev/null > log_files.txt</span>
                             </div>
                             <div class="output-text">Find logs, suppress permission errors</div>
                         </div>
