--- a/v93-1450-command-summary-Chapter07.html
+++ b/v93-1450-command-summary-Chapter07.html
@@ -677,8 +677,8 @@
                                 <div class="command-block">
                                     <div class="command-line">
                                         <span class="prompt">[admin@computer ~]$</span>
-                                        <span class="command" onclick="copyCommand('echo \"Admin password: secret123\" > passwords.txt')">echo "Admin password: secret123" > passwords.txt</span>
-                                        <button class="copy-btn" onclick="copyCommand('echo \"Admin password: secret123\" > passwords.txt')" title="Copy command">📋</button>
+                                        <span class="command" onclick="copyCommand('echo Admin password: secret123 > passwords.txt')">echo "Admin password: secret123" > passwords.txt</span>
+                                        <button class="copy-btn" onclick="copyCommand('echo Admin password: secret123 > passwords.txt')" title="Copy command">📋</button>
                                     </div>
                                     <div class="command-explanation">Creates a file containing sensitive password information</div>
                                 </div>
@@ -769,8 +769,8 @@
                                 <div class="command-block">
                                     <div class="command-line">
                                         <span class="prompt">[admin@computer ~]$</span>
-                                        <span class="command" onclick="copyCommand('echo \"#!/bin/bash\\necho Checking system security...\\nwho\\ndate\" > security-check.sh')">echo "#!/bin/bash\necho Checking system security...\nwho\ndate" > security-check.sh</span>
-                                        <button class="copy-btn" onclick="copyCommand('echo \"#!/bin/bash\\necho Checking system security...\\nwho\\ndate\" > security-check.sh')" title="Copy command">📋</button>
+                                        <span class="command" onclick="copyCommand('echo #!/bin/bash\\necho Checking system security...\\nwho\\ndate > security-check.sh')">echo "#!/bin/bash\necho Checking system security...\nwho\ndate" > security-check.sh</span>
+                                        <button class="copy-btn" onclick="copyCommand('echo #!/bin/bash\\necho Checking system security...\\nwho\\ndate > security-check.sh')" title="Copy command">📋</button>
                                     </div>
                                     <div class="command-explanation">Creates a script that checks who's logged in and the current time</div>
                                 </div>
@@ -873,8 +873,8 @@
                                 <div class="command-block">
                                     <div class="command-line">
                                         <span class="prompt">[admin@computer ~]$</span>
-                                        <span class="command" onclick="copyCommand('echo \"Security Team Project Plan\" > team-project.txt')">echo "Security Team Project Plan" > team-project.txt</span>
-                                        <button class="copy-btn" onclick="copyCommand('echo \"Security Team Project Plan\" > team-project.txt')" title="Copy command">📋</button>
+                                        <span class="command" onclick="copyCommand('echo Security Team Project Plan > team-project.txt')">echo "Security Team Project Plan" > team-project.txt</span>
+                                        <button class="copy-btn" onclick="copyCommand('echo Security Team Project Plan > team-project.txt')" title="Copy command">📋</button>
                                     </div>
                                     <div class="command-explanation">Creates a project file for team collaboration</div>
                                 </div>
