--- a/v93-1450-command-summary-Chapter08.html
+++ b/v93-1450-command-summary-Chapter08.html
@@ -701,8 +701,8 @@
                                     <div class="command-explanation">Starts a 5-minute sleep in background (& means background)</div>
                                     <div class="command-line">
                                         <span class="prompt">[admin@computer ~]$</span>
-                                        <span class="command" onclick="copyCommand('find /home -name \"*.log\" > log-files.txt &')">find /home -name "*.log" > log-files.txt &</span>
-                                        <button class="copy-btn" onclick="copyCommand('find /home -name \"*.log\" > log-files.txt &')" title="Copy command">📋</button>
+                                        <span class="command" onclick="copyCommand('find /home -name *.log > log-files.txt &')">find /home -name "*.log" > log-files.txt &</span>
+                                        <button class="copy-btn" onclick="copyCommand('find /home -name *.log > log-files.txt &')" title="Copy command">📋</button>
                                     </div>
                                     <div class="command-explanation">Searches for log files in background, saves results to file</div>
                                 </div>
